# tg_bot_ai

./: README.md  bot.py  bot_text.py  pyproject.toml
media/: GPT.m4a  Love.m4a  SQL.m4a
